profiling-using-exp-runner/backup_FINAL_RESULTS/fibonacci_experiment_2/run_5_repetition_0/energibridge.log
sampling interval: 200, target function: fibonacci_lru_cache, input size: 20
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.fibonacci as module; X = 20; module.fibonacci_lru_cache(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.604233013153076 for 0.23545201 sec of execution.
